# rust_esp32_station

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: index.html  main.rs  wifi.rs
