[package]
edition      = "2024"
name         = "w"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "w"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable", "defmt"] }
esp-println = { version = "0.16.1", features = ["esp32", "defmt-espflash"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "defmt"] }
critical-section = "1.2.0"

# Rtos section with embassy
esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32", "esp-alloc", "esp-radio"] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
static_cell      = "2.1.1"

# Webserver section with wifi
defmt = "1.0.1"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
picoserve = { version = "0.17.1", features = ["embassy"] }






[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
